# trace2evals

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: eval-gate.yml
data/evals/: goldens-v1.json
data/traces/: spans.jsonl  trajectories.json
evals/: conftest.py  test_agent_regression.py
src/trace2evals/: __init__.py  agent.py  backends.py  cli.py  dates.py  emit.py  mine.py  scenarios.py  scorers.py  tools.py  tracing.py
tests/: test_emit.py  test_mine.py  test_scorers.py
